# crash_courses

./: .gitignore  README.md  index.html  package.json
02_oop_with_python_patrick-loeber/: 01-Class-and-Instance.py
04_lua-in-1000-seconds_tj-deVries/: 02_literals.lua  03_functions.lua  04_tables.lua
04_postgresql-essential-training_linkedin-learning/: queries.sql
05_js-crash-course_traversy-media/: style.css
05_lua-in-1000-seconds_tj-deVries/: 06_if.lua  08_colon_functions.lua  09_metatables.lua
07_play-with-dom_learn-with-sumit/: script.js
09_js_modern_es6_learn-with-sumit/: 07-array.filter.ts  09-array.splice.ts  18-rest-parameter.ts
11_ts-series_learn-with-sumit/: README.md
14_fabric.js_just-sun-one/: index.html  package.json
23_react-hook-and-context-api_traversy-media/: prettier.config.cjs
25_zustand-crash-course_web-cifar/: prettier.config.js
28_astro-crash-course_traversy-media/: astro.config.mjs  package.json
28_htmx-crash-course_traversy-media/: main.js  package.json
30_php-3plus-hour-crash-course_traversy-media/: 17-oop.php
31_php-3plus-hour-crash-course_traversy-media/: 11-sanitize_inputs.php
35_learn-go_llm/: README.md
38_build-ai-agent-python_boot.dev/: .gitignore  pyproject.toml
38_build-ai-agent-python_boot.dev/data/: lorem.txt
38_build-ai-agent-python_boot.dev/src/coding_agent/: __init__.py  call_function.py  get_files_info.py  read_file.py  run_python_file.py  write_file.py
38_build-ai-agent-python_boot.dev/test/coding_agent/: test_get_files_info.py  test_read_file.py  test_run_python_file.py  test_write_file.py
(+941 files in other folders)
